Fixed lightbox on mobile.

--- a/app/assets/stylesheets/components/user/user-bar.sass
+++ b/app/assets/stylesheets/components/user/user-bar.sass
@@ -7,6 +7,9 @@
   .container
     height: 56px
 
+    @media #{$small-and-down}
+      width: 100%
+
   #user-menu
     top: 56px !important
     right: 0 !important
